# OpenJobsAgent_2days_finished

./: .env.example  .gitignore  README.md  pyproject.toml  总体规划.docx
backend/: __init__.py
backend/app/: main.py
backend/app/ingestion/: __init__.py  cleaning.py  config.py  documents.py  embeddings.py  pipeline.py  storage.py
backend/app/rag/: __init__.py  conversation.py  glm.py  models.py  query_parser.py  retriever.py  service.py
data/: eval_queries.json
openjobs_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/: judge_ranking_eval_report.md  judge_ranking_eval_results.json
scripts/: evaluate_judge_ranking.py  ingest_profiles.py  test_multiturn.py  test_rag.py
tests/: test_ingestion.py
